was-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: was-deployment
  labels:
    app: petclinic
spec:
  replicas: 3
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: tomcat
        image: 723165663216.dkr.ecr.ap-northeast-2.amazonaws.com/petclinic/was:v1
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
