was-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: was-service
spec:
  selector:
    app: petclinic
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
